Add institutionCode and datasetName

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -211,10 +211,16 @@ taxon %<>% mutate(references = raw_identifier)
 taxon %<>% mutate(datasetID = "") 
 ```
 
+### institutionCode
+
+```{r}
+taxon %<>% mutate(institutionCode = "INBO") 
+```
+
 ### datasetName
 
 ```{r}
-taxon %<>% mutate(datasetName = "") 
+taxon %<>% mutate(datasetName = "Ad hoc checklist of alien species in Belgium") 
 ```
 
 ### taxonID
