--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -826,7 +826,7 @@ invasion_stage %<>% mutate(description = case_when(
   raw_degree_of_establishment == "transported" ~ "introduced",
   raw_degree_of_establishment == "colonizing" |
   raw_degree_of_establishment == "established" |
-  raw_degree_of_establishment == "invasive" ~ "established",
+  raw_degree_of_establishment == "invasive" ~ "established"
 ))
 ```
 
