Update read data + taxon mapping cf checklist recipe
- Removes locale
- Uses here()
- Only remove duplicates in taxon mapping

Output data remains the same

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -9,13 +9,14 @@ author:
 date: "`r Sys.Date()`"
 output:
   html_document:
+    df_print: paged
+    number_sections: true
     toc: true
     toc_depth: 3
     toc_float: true
-    number_sections: true
 ---
 
-This document describes how we map the checklist data to Darwin Core. The source file for this document can be found [here](https://docs.google.com/spreadsheets/d/1LeXXbry2ArK2rngsmFjz_xErwE1KwQ8ujtvHNmTVA6E/edit#gid=0).
+This document describes how we map the checklist data to Darwin Core. The source file for this document can be found [here](https://github.com/trias-project/ad-hoc-checklist/blob/master/src/dwc_mapping.Rmd).
 
 # Setup
 
@@ -23,40 +24,22 @@ This document describes how we map the checklist data to Darwin Core. The source
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 ```
 
-Set locale (so we use UTF-8 character encoding):
-
-```{r}
-# This works on Mac OS X, might not work on other OS
-Sys.setlocale("LC_CTYPE", "en_US.UTF-8")
-```
+Load libraries:
 
 Load libraries:
 
 ```{r}
-library(tidyverse)       # To transform data
-library(magrittr)        # For %<>% pipes
-library(googlesheets)    # To import and read Google spreadsheets 
-library(janitor)         # To clean input data
-library(stringr)         # To perform string operations
-library(digest)          # To generate hashes
-library(rgbif)           # 
+library(tidyverse)      # To transform data
+library(magrittr)       # To use %<>% pipes
+library(here)           # To find files
+library(janitor)        # To clean input data
+library(googlesheets)   # To import and read Google spreadsheets 
+library(stringr)        # To perform string operations
+library(digest)         # To generate hashes
+library(rgbif)          # To use GBIF services
 ```
 
-Set file paths (all paths should be relative to this script):
- 
-```{r}
-# Raw files:
-raw_data_file = "../data/raw/ad_hoc_checklist_dump.csv"
-
-# Processed files:
-dwc_taxon_file = "../data/processed/taxon.csv"
-dwc_literature_references_file = "../data/processed/references.csv"
-dwc_distribution_file = "../data/processed/distribution.csv"
-dwc_profile_file = "../data/processed/speciesprofile.csv"
-dwc_description_file = "../data/processed/description.csv"
-```
-
-## Read and pre-process raw data
+## Read source data
 
 The original spreadsheet can be found [here](https://docs.google.com/spreadsheets/d/1LeXXbry2ArK2rngsmFjz_xErwE1KwQ8ujtvHNmTVA6E/edit#gid=0). We need to retrieve this spreadsheet and select the specific worksheet first:
 
@@ -66,107 +49,94 @@ Retrieve the spreadsheet:
 retrieve_spreadsheet <- gs_title("ad hoc checklist")
 ```
 
-select the data in the worksheet `checklist`:
+Select the data in the worksheet `checklist`:
 
 ```{r}
-raw_data <- retrieve_spreadsheet %>% gs_read("checklist")
+input_data <- retrieve_spreadsheet %>% gs_read("checklist")
 ```
 
-We want to add a copy of the raw ad hoc checklist to the Github repository:
+We want to add a copy of the source data to the repository:
 
 ```{r}
-write.csv(raw_data, file = raw_data_file, na = "", row.names = FALSE, fileEncoding = "UTF-8")
+write.csv(input_data, file = here("data", "raw", "ad_hoc_checklist_dump.csv"), na = "", row.names = FALSE, fileEncoding = "UTF-8")
 ```
 
-Inspect `raw_data`: 
+Preview data: 
 
 ```{r}
-raw_data %>% head()
+input_data %>% head()
 ```
 
-Clean the data somewhat: remove empty rows if present:
+# Process source data
+
+## Tidy data
+
+Clean data somewhat:
 
 ```{r}
-raw_data %<>%
+input_data %<>%
   remove_empty("rows") %>%    # Remove empty rows
   clean_names()               # Have sensible (lowercase) column names
 ```
 
-Change `Lacerta viridis (Laurenti, 1768) / bilineata` to `Lacerta viridis s.l.` (see [this issue](https://github.com/trias-project/ad-hoc-checklist/issues/19))
+Add prefix `input_` to all column names to avoid name clashes with Darwin Core terms:
 
 ```{r}
-raw_data %<>% mutate(scientific_name = recode(scientific_name,
+colnames(input_data) <- paste0("input_", colnames(input_data))
+```
+
+## Scientific names
+
+Change `Lacerta viridis (Laurenti, 1768) / bilineata` to `Lacerta viridis s.l.` (see [this issue](https://github.com/trias-project/ad-hoc-checklist/issues/19)):
+
+```{r}
+input_data %<>% mutate(input_scientific_name = recode(input_scientific_name,
    "Lacerta viridis (Laurenti, 1768) / bilineata" = "Lacerta viridis s.l.")) 
 ```
 
-## Generate taxonID
+## Taxon IDs
 
-To uniquely identify a taxon in the taxon core and reference taxa in the extensions, we need a `taxonID`. Since we need it in all generated files, we generate it here in the raw data frame. It is a combination of `dataset-shortname:taxon:` and a hash based on the scientific name. As long as the scientific name doesn't change, the ID will be stable.  
-
-```{r}
-# Vectorize the digest function (The digest() function isn't vectorized. So if you pass in a vector, you get one value for the whole vector rather than a digest for each element of the vector):
-vdigest <- Vectorize(digest)
-
-# Generate taxonID:
-raw_data %<>% mutate(taxon_id = paste("ad-hoc-checklist", "taxon", vdigest(scientific_name, algo="md5"), sep = ":"))
-```
-
-## Remove duplicates
-
-Some taxa are recorded multiple times:
+To link taxa with information in the extension(s), each taxon needs a unique and relatively stable `taxonID`. Here we create one in the form of `dataset_shortname:taxon:hash`, where `hash` is unique code based on scientific name and kingdom (that will remain the same as long as scientific name and kingdom remain the same):
 
 ```{r}
-duplicates <- raw_data %>%  
-  slice(which(duplicated(raw_data $ scientific_name) == "TRUE")) %>% 
-  select(scientific_name)
+vdigest <- Vectorize(digest) # Vectorize digest function to work with vectors
+input_data %<>% mutate(input_taxon_id = paste(
+  "ad-hoc-checklist",
+  "taxon",
+  vdigest(paste(input_scientific_name), algo = "md5"),
+  sep = ":"
+))
 ```
 
-```{r, echo=FALSE}
-duplicates
-```
+### Show summary
 
-Show all available information about these duplicated taxa:
+Show the number of taxa and distributions per kingdom and rank:
 
 ```{r}
-raw_data %>% 
-  filter(scientific_name %in% duplicates $ scientific_name) %>% 
-  arrange(scientific_name)
+input_data %>%
+  group_by(input_kingdom, input_rankmarker) %>%
+  summarize(
+    `# taxa` = n_distinct(input_taxon_id),
+    `# distributions` = n()
+  ) %>%
+  adorn_totals("row")
 ```
 
-These taxa are repeated in the checklist as they contain distribution information for multipele regions (`location`), with the date of first/last observation (`date_first_observation` and `date_last_observation`) differing between those regions. This information is thus only relevant for the mapping of the distribution extension. We save this information in a separate dataframe:
+## Preview data
 
 ```{r}
-raw_with_duplicates <- raw_data
+input_data %>% head()
 ```
 
-For the mapping of the taxon core, the literature reference extension, the species profile extension and the description extension, we can remove the duplicated records:
+# Mapping
+
+## Taxon core
+
+Create a dataframe with unique taxa only (ignoring multiple distribution rows):
 
 ```{r}
-raw_data %<>% filter(duplicated(raw_data $ scientific_name)==FALSE)
+taxon <- input_data %>% distinct(input_taxon_id, .keep_all = TRUE)
 ```
-
-## Further pre-processing:
-
-Add prefix `raw_` to all column names to avoid name clashes with Darwin Core terms:
-
-```{r}
-colnames(raw_data) <- paste0("raw_", colnames(raw_data))
-colnames(raw_with_duplicates) <- paste0("raw_", colnames(raw_with_duplicates))
-```
- 
-Preview raw data:
-
-```{r}
-raw_data %>% head()
-```
-
-# Create taxon cores
-
-```{r start_taxon}
-taxon <- raw_data
-```
-
-## Term mapping
 
 Map the data to [Darwin Core Taxon](http://rs.gbif.org/core/dwc_taxon_2015-04-24.xml).
  
@@ -215,55 +185,115 @@ taxon %<>% mutate(datasetName = "Ad hoc checklist of alien species in Belgium")
 ### taxonID
 
 ```{r}
-taxon %<>% mutate(taxonID = raw_taxon_id)
+taxon %<>% mutate(taxonID = input_taxon_id)
 ```
 
 ### scientificName
 
 ```{r}
-taxon %<>% mutate(scientificName = raw_scientific_name) 
+taxon %<>% mutate(scientificName = input_scientific_name) 
 ```
 
 ### kingdom
 
+Inspect values:
+
 ```{r}
-taxon %<>% mutate(kingdom = raw_kingdom) 
+taxon %>%
+  group_by(input_kingdom) %>%
+  count()
+```
+
+Map values:
+
+```{r}
+taxon %<>% mutate(kingdom = input_kingdom)
 ```
 
 ### phylum
 
+Inspect values:
+
 ```{r}
-taxon %<>% mutate(phylum = raw_phylum) 
+taxon %>%
+  group_by(input_phylum) %>%
+  count()
+```
+
+Map values:
+
+```{r}
+taxon %<>% mutate(phylum = input_phylum)
 ```
 
 ### order
 
+Inspect values:
+
 ```{r}
-taxon %<>% mutate(order = raw_order) 
+taxon %>%
+  group_by(input_order) %>%
+  count()
+```
+
+Map values:
+
+```{r}
+taxon %<>% mutate(order = input_order)
 ```
 
 ### family
 
+Inspect values:
+
 ```{r}
-taxon %<>% mutate(family = raw_family)
+taxon %>%
+  group_by(input_family) %>%
+  count()
+```
+
+Map values:
+
+```{r}
+taxon %<>% mutate(family = input_family)
 ```
 
 ### genus
 
+Inspect values:
+
 ```{r}
-taxon %<>% mutate(genus = raw_genus)
+taxon %>%
+  group_by(input_genus) %>%
+  count()
+```
+
+Map values:
+
+```{r}
+taxon %<>% mutate(genus = input_genus)
 ```
 
 ### taxonRank
 
+Inspect values:
+
 ```{r}
-taxon %<>% mutate(taxonRank = raw_taxon_rank)
+taxon %>%
+  group_by(input_taxon_rank) %>%
+  count()
+```
+
+Map values:
+
+```{r}
+taxon %<>% mutate(taxonRank = input_taxon_rank)
 ```
 
 ### nomenclaturalCode
 
 ```{r}
-taxon %<>% mutate(nomenclaturalCode = raw_nomenclatural_code)
+taxon %<>% mutate(nomenclaturalCode = input_nomenclatural_code)
 ```
 
 ## Post-processing
@@ -271,7 +301,7 @@ taxon %<>% mutate(nomenclaturalCode = raw_nomenclatural_code)
 Remove the original columns:
 
 ```{r}
-taxon %<>% select(-starts_with("raw_"))
+taxon %<>% select(-starts_with("input_"))
 ```
 
 Preview data:
@@ -283,13 +313,13 @@ taxon %>% head()
 Save to CSV:
 
 ```{r}
-write.csv(taxon, file = dwc_taxon_file, na = "", row.names = FALSE, fileEncoding = "UTF-8")
+write.csv(taxon, file = here("data", "processed", "taxon.csv"), na = "", row.names = FALSE, fileEncoding = "UTF-8")
 ```
 
 # Create literature references extension
 
 ```{r}
-literature_references <- raw_data
+literature_references <- input_data
 ```
 
 ## Pre-processing
@@ -405,7 +435,7 @@ distribution %<>% mutate(establishmentMeans = "introduced")
 
 Information for `eventDate` is contained in `raw_date_first_observation` and `raw_date_last_observation`, which we will express here in an ISO 8601 date format `yyyy/yyyy` (`start_date/end_date`).
 
-Inspect `raw_data_first_observation`:
+Inspect `input_data_first_observation`:
 
 ```{r}
 unique(distribution $ raw_date_first_observation)
@@ -503,7 +533,7 @@ write.csv(distribution, file = dwc_distribution_file, na = "", row.names = FALSE
 In this extension will express broad habitat characteristics (e.g. `isTerrestrial`) of the species.
 
 ```{r start_species_profile}
-species_profile <- raw_data
+species_profile <- input_data
 ```
 
 Habitat information can be found in `raw_realm`.
@@ -616,7 +646,7 @@ Native range information can be found in `raw_native_range`.
 Create separate dataframe:
 
 ```{r start_native_range}
-native_range <- raw_data
+native_range <- input_data
 ```
 
 Show unique values:
@@ -722,7 +752,7 @@ Pathway information (e.g. `aquaculture`) can be found in `raw_introduction_pathw
 Create separate dataframe:
 
 ```{r start_pathway}
-pathway_desc <- raw_data
+pathway_desc <- input_data
 ```
 
 Show unique values:
@@ -812,7 +842,7 @@ pathway_desc %<>% filter(!is.na(description) & description != "")
 Create separate dataframe:
 
 ```{r start_invasion_stage}
-invasion_stage <- raw_data
+invasion_stage <- input_data
 ```
 
 The information for invasion stage is contained in `raw_degree_of_establishment`:
